--- a/css/faq.css
+++ b/css/faq.css
@@ -66,18 +66,19 @@ section {
   padding-top: 1rem;
   line-height: 1.7;
   font-size: 1.2rem ;
+  padding-left: 0.5rem;
 }
 
 .faq.active .answer {
   max-height: 300px;
-  animation: fade 1s ease-in-out;
+  animation: fade 0.2s ease-in;
 }
 .faq.active .icon {
   transform: rotate(45deg) ;
 }
 
 .icon {
-  transition: transform 0.5s ease-in;
+  transition: transform 0.3s ease-in;
   color: #56daf3;
   
 }
@@ -92,6 +93,9 @@ section {
   }
 
   .question h3 {
+    font-size: 1rem;
+  }
+  .icon {
     font-size: 1rem;
   }
 
@@ -114,6 +118,9 @@ section {
   section .title1 {
     font-size: 3.5rem;
    }
+   .icon {
+    font-size: 1.5rem;
+   }
 }
 @media (max-width :900px )and ( min-width : 460px){
   section .title2 {
@@ -122,6 +129,7 @@ section {
   
   section .title1 {
    font-size: 2.5rem;
+   padding: 2rem;
   }
   
 
@@ -130,6 +138,9 @@ section {
     margin-top: 0rem;
      
    }
+  .icon {
+    font-size: 1.2rem;
+  }
 
 }
 
